--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php-di/php-di": "^7.0",
     "slim/csrf": "^1.5",
     "slim/flash": "^0.4.0",
+    "slim/http": "^1.4",
     "slim/psr7": "^1.7",
     "slim/slim": "^4.0",
     "slim/twig-view": "^3.4",
